refactor: refine builds section

--- a/velocity.yml
+++ b/velocity.yml
@@ -42,8 +42,8 @@ builds:
     golang-app:
         image: golang:1.21.4
         directory: .
-        build: go build -o /tmp/app .
-        output: /tmp/app
+        build: make build-cli
+        output: $GOPATH/bin/velocity
 
 workflows:
     all-tests:
