--- a/velocity.yml
+++ b/velocity.yml
@@ -1,6 +1,8 @@
 config:
+    project: velocity
     registry: docker.io/library
-    server: https://velocity-ci.com/api
+    server: http://localhost:8080
+    ui: http://localhost:8080
 
 tests:
     velocity:
