--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,57 +1,59 @@
 name: Deploy docusaurus site to Pages
 
 on:
-  push:
-    branches: ["main"]
-  workflow_dispatch:
+    push:
+        branches: ["main"]
+        paths:
+            - "docs/**"
+    workflow_dispatch:
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+    contents: read
+    pages: write
+    id-token: write
 
 concurrency:
-  group: "docs"
-  cancel-in-progress: true
+    group: "docs"
+    cancel-in-progress: true
 
 env:
-  BUILD_PATH: "docs"
+    BUILD_PATH: "docs"
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: npm
-          cache-dependency-path: ${{ env.BUILD_PATH }}/package-lock.json
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v4
-      - name: Install dependencies
-        run: npm install
-        working-directory: ${{ env.BUILD_PATH }}
-      - name: Build
-        run: npm run build
-        working-directory: ${{ env.BUILD_PATH }}
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ${{ env.BUILD_PATH }}/build
+    build:
+        name: Build
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+            - name: Setup Node
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "20"
+                  cache: npm
+                  cache-dependency-path: ${{ env.BUILD_PATH }}/package-lock.json
+            - name: Setup Pages
+              id: pages
+              uses: actions/configure-pages@v4
+            - name: Install dependencies
+              run: npm install
+              working-directory: ${{ env.BUILD_PATH }}
+            - name: Build
+              run: npm run build
+              working-directory: ${{ env.BUILD_PATH }}
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+                  path: ${{ env.BUILD_PATH }}/build
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    needs: build
-    runs-on: ubuntu-latest
-    name: Deploy
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    deploy:
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+        needs: build
+        runs-on: ubuntu-latest
+        name: Deploy
+        steps:
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v4
