--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
             KAFKA_BROKER: kafka:9092
             REDIS_URL: redis:6379
             MONGODB_URI: mongodb://%s%smongodb:27017/?replicaSet=rs0
+            DEV_MODE: true
         ports:
             - "8080:8080"
         networks:
@@ -96,6 +97,22 @@ services:
             - api
         volumes:
             - .:/app
+        restart: on-failure
+
+    agent:
+        build:
+            context: .
+            dockerfile: Dockerfile.agent.dev
+        depends_on:
+            - api
+        volumes:
+            - .:/app
+        environment:
+            KAFKA_USERNAME: admin
+            KAFKA_PASSWORD: password
+            KAFKA_BROKER: kafka:9092
+            VELOCITY_URL: http://api:8080/
+            DEV_MODE: true
         networks:
             - internal
         restart: on-failure
