feat: add mongodb to external ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
             - mongo-config:/data/configdb
         networks:
             - internal
+            - external
         healthcheck:
             test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'host.docker.internal:27017'}]}) }" | mongosh --port 27017 --quiet
             interval: 5s
