--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -76,6 +76,7 @@ services:
             KAFKA_USERNAME: admin
             KAFKA_PASSWORD: password
             KAFKA_BROKER: kafka:9092
+            KAFKA_GROUP_ID: api
             REDIS_URL: redis:6379
             MONGODB_URI: mongodb://%s%smongodb:27017/?replicaSet=rs0
             DEV_MODE: true
@@ -112,6 +113,7 @@ services:
             KAFKA_USERNAME: admin
             KAFKA_PASSWORD: password
             KAFKA_BROKER: kafka:9092
+            KAFKA_GROUP_ID: agent
             VELOCITY_URL: http://api:8080
             DEV_MODE: true
         networks:
