--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,6 +6,7 @@ services:
         volumes:
             - .:/app
         environment:
+            KAFKA_GROUP_ID: api
             DEV_MODE: true
         ports:
             - "8080:8080"
@@ -39,6 +40,7 @@ services:
         volumes:
             - .:/app
         environment:
+            KAFKA_GROUP_ID: agent
             VELOCITY_URL: http://api:8080
             DEV_MODE: true
         networks:
