--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -80,6 +80,7 @@ services:
             REDIS_URL: redis:6379
             MONGODB_URI: mongodb://%s%smongodb:27017/?replicaSet=rs0
             DEV_MODE: true
+            DEV_SERVICES: true
         ports:
             - "8080:8080"
         networks:
@@ -116,6 +117,7 @@ services:
             KAFKA_GROUP_ID: agent
             VELOCITY_URL: http://api:8080
             DEV_MODE: true
+            DEV_SERVICES: true
         networks:
             - internal
         restart: on-failure
