--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,7 @@ services:
         environment:
             KAFKA_GROUP_ID: api
             DEV_MODE: true
+            DEV_SERVICES: false
         ports:
             - "8080:8080"
         networks:
@@ -27,8 +28,6 @@ services:
             - api
         volumes:
             - .:/app
-        environment:
-            DEV_MODE: true
         restart: on-failure
 
     agent:
@@ -43,6 +42,7 @@ services:
             KAFKA_GROUP_ID: agent
             VELOCITY_URL: http://api:8080
             DEV_MODE: true
+            DEV_SERVICES: false
         networks:
             - internal
         restart: on-failure
