--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -96,8 +96,6 @@ services:
         build:
             context: .
             dockerfile: Dockerfile.cli.dev
-        depends_on:
-            - api
         volumes:
             - .:/app
         restart: on-failure
@@ -107,7 +105,8 @@ services:
             context: .
             dockerfile: Dockerfile.agent.dev
         depends_on:
-            - api
+            api:
+                condition: service_healthy
         volumes:
             - .:/app
         environment:
