--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -24,8 +24,6 @@ services:
         build:
             context: .
             dockerfile: Dockerfile.cli.dev
-        depends_on:
-            - api
         volumes:
             - .:/app
         restart: on-failure
@@ -35,7 +33,8 @@ services:
             context: .
             dockerfile: Dockerfile.agent.dev
         depends_on:
-            - api
+            api:
+                condition: service_healthy
         volumes:
             - .:/app
         environment:
