--- a/env/.env.agent
+++ b/env/.env.agent
@@ -1,5 +1,3 @@
-KAFKA_USERNAME=admin
-KAFKA_PASSWORD=password
-KAFKA_BROKER=kafka:9092
 KAFKA_GROUP_ID_AGENT=agent
 VELOCITY_URL=http://api:8080
+OTEL_RESOURCE_ATTRIBUTES="service.name=agent,service.instance.id=agent"
