--- a/env/.env.api
+++ b/env/.env.api
@@ -1,9 +1,2 @@
-MONGODB_USERNAME=""
-MONGODB_PASSWORD=""
-MONGODB_DATABASE=velocity
-KAFKA_USERNAME=admin
-KAFKA_PASSWORD=password
-KAFKA_BROKER=kafka:9092
 KAFKA_GROUP_ID_API=api
-REDIS_URL=redis:6379
-MONGODB_URI=mongodb://%s%smongodb:27017/?replicaSet=rs0
+OTEL_RESOURCE_ATTRIBUTES="service.name=api,service.instance.id=api"
