feat: implement mocks and mocking potential for dev usage

--- a/env/.env.api
+++ b/env/.env.api
@@ -1,2 +1,8 @@
 KAFKA_GROUP_ID_API=api
 OTEL_RESOURCE_ATTRIBUTES="service.name=api,service.instance.id=api"
+
+# Services
+MONGO_ID_CREATOR=true
+MONGO_REPOSITORY_MANAGER=true
+KAFKA_PROCESS_QUEUE=true
+MONGO_PRIORITY_QUEUE=true
