feat: change multi-variables to single for each service

--- a/env/.env.api
+++ b/env/.env.api
@@ -2,7 +2,6 @@ KAFKA_GROUP_ID_API=api
 OTEL_RESOURCE_ATTRIBUTES="service.name=api,service.instance.id=api"
 
 # Services
-MONGO_ID_CREATOR=true
-MONGO_REPOSITORY_MANAGER=true
-KAFKA_PROCESS_QUEUE=true
-MONGO_PRIORITY_QUEUE=true
+ID_CREATOR=mongo
+REPOSITORY_MANAGER=mongo
+PRIORITY_QUEUE=mongo
