--- a/velocity.2nd.yml
+++ b/velocity.2nd.yml
@@ -8,7 +8,7 @@ config:
 
 images:
     - name: golang
-      image: golang:1.23-rc-bookworm
+      image: golang:1.23.1-bookworm
       default: true
 
 builds:
