--- a/env/.env.shared
+++ b/env/.env.shared
@@ -1,2 +1,3 @@
-OTEL_METRIC_EXPORT_INTERVAL="5000"
-DEV_MODE=true
+# This env file is used in dev and prod testing for both api and agent services.
+OTEL_METRIC_EXPORT_INTERVAL="5000" # This is only used if otel is being used.
+DEV_MODE=true # This is true for both dev and prod since we are testing against both, this is not for deployment.
