feat: add a priority queue implementation that just calls the api server

--- a/compose.yml
+++ b/compose.yml
@@ -38,6 +38,7 @@ services:
         environment:
             OTEL_RESOURCE_ATTRIBUTES: service.name=agent,service.instance.id=agent
             VELOCITY_URL: http://api:8080
+            PRIORITY_QUEUE: velocity
         env_file:
             - env/.env.shared
         depends_on:
